Add confirmChallenge function to contract and move collateralization logic from the initial challenge function to the confirm challenge (new one).

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
-# Python-generated files
+.venv
 __pycache__/
 *.py[oc]
+.pytest_cache/
 build/
 dist/
 wheels/
 *.egg-info
-artifacts
-cache
-.build
-
-# Virtual environments
-.venv
+artifacts/
+cache/
+.build/
+node_modules/
